--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   google_fonts: ^4.0.3
   flutter_screenutil: ^5.7.0
   flutter_svg: ^2.0.4
+  remixicon: ^1.0.0
+  lottie: ^2.3.1
 
 dev_dependencies:
   flutter_test:
@@ -29,4 +31,5 @@ flutter:
     - assets/icons/
     - assets/books_img/
     - assets/svgs/
+    - assets/lottie/
 
