--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,9 @@ dependencies:
   flutter_svg: ^2.0.4
   remixicon: ^1.0.0
   lottie: ^2.3.1
+  get: ^4.6.5
+  http: ^0.13.5
+  dio: ^5.1.1
 
 dev_dependencies:
   flutter_test:
