--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   get: ^4.6.5
   http: ^0.13.5
   dio: ^5.1.1
+  shared_preferences: ^2.1.0
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
